--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -17,7 +17,9 @@
 			"filetypes": ["ocaml", "reason"]
 		}
 	},
+        "suggest.numberSelect": true,
         "diagnostic.virtualText": true,
         "diagnostic.virtualTextPrefix": "▶",
+        "diagnostic.checkCurrentLine": true,
 	"codeLens.enable": true
 }
