--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -129,11 +129,11 @@ rate "786432"  // Your download rate to the server. Max rate: "786432"
 cl_cmdrate "128"  // Max number of command packets sent to server per second
 cl_updaterate "128"  // Number of packets per second you are requesting from the server
 cl_interp "0.007813"  // Sets the interpolation amount, currently on the lowest value
-cl_interp_ratio "1"  // Sets the interpolation amount (final amount is cl_interp_ratio / cl_updaterate)
+cl_interp_ratio "2"  // Sets the interpolation amount (final amount is cl_interp_ratio / cl_updaterate)
 cl_lagcompensation "1"  // Lag compensation helps by eliminating combat latency from client side view
 cl_predict "1"  // Skip waiting for server feedback and simulate client side movement in real-time
 cl_predictweapons "1"  // Skip waiting for server feedback and perform client side prediction of weapon effects
-mm_dedicated_search_maxping "50"  // Maxping Search in Matchmaking (increase this value if you can't find any games)
+mm_dedicated_search_maxping "65"  // Maxping Search in Matchmaking (increase this value if you can't find any games)
 
 echo Network Settings Loaded [X]   // Loading confirmation in console
 
@@ -171,7 +171,7 @@ snd_mute_mvp_music_live_players "0"  // MVP music is muted if players from both 
 snd_mvp_volume "0"  // Volume of the MVP music
 snd_roundend_volume "0"  // Volume of round end music
 snd_roundstart_volume "0"  // Volume of round start music
-snd_tensecondwarning_volume "0.03"  // 10 Second warning music, enabled on 3% volume to hear if there's time to defuse
+snd_tensecondwarning_volume "0.3"  // 10 Second warning music, enabled on 30% volume to hear if there's time to defuse
 
 echo Sound Settings Loaded [X]   // Loading confirmation in console
 
@@ -189,7 +189,7 @@ echo Other Settings Loaded [X]   // Loading confirmation in console
 // Jumpthrow (For Nades)
 alias "+jumpthrow" "+jump; -attack"
 alias "-jumpthrow" "-jump"
-bind "mouse5" "+jumpthrow" // Bind to jumpthrow
+bind "x" "+jumpthrow" // Bind to jumpthrow
 
 // Load whatever gamemode you want with the "map" command. Examples: "map de_dust2; competitive" or "map dz_sirocco; dangerzone"
 alias "casual" "game_type 0; game_mode 0"
