--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -187,9 +187,15 @@ echo Other Settings Loaded [X]   // Loading confirmation in console
 ////////////////////////// 14. Scripts
 
 // Jumpthrow (For Nades)
+// To use: Pull the pin from the grenade normally, then use the jumpthrow bind.
 alias "+jumpthrow" "+jump; -attack"
 alias "-jumpthrow" "-jump"
 bind "x" "+jumpthrow" // Bind to jumpthrow
+
+// Increase volume when walking.
+alias +incvol "incrementvar volume 0 2 0.5;+speed"
+alias -incvol "incrementvar volume 0 2 -0.5;-speed"
+bind SHIFT +incvol
 
 // Load whatever gamemode you want with the "map" command. Examples: "map de_dust2; competitive" or "map dz_sirocco; dangerzone"
 alias "casual" "game_type 0; game_mode 0"
@@ -230,7 +236,8 @@ alias defG		"bind g drop"
 alias def1		"bind 1 slot1"
 alias def2		"bind 2 slot2"
 alias def3		"bind 3 slot3"
-alias defTAB	"bind tab +fps"
+alias defTAB		"bind tab +fps"
+alias defMouse2		"bind mouse2 +zoom"
 
 //Part 2
 alias keyZ		"bind z customZ"
@@ -243,20 +250,24 @@ alias keyG		"bind g customG"
 alias key1		"bind 1 custom1"
 alias key2		"bind 2 custom2"
 alias key3		"bind 3 custom3"
-alias keyTAB	"bind tab customTAB"
+alias keyTAB		"bind tab customTAB"
+alias keyMouse2		"bind mouse2 customMouse2"
 
 //Part 3
 alias customZ	"god"
 alias customV	"noclip"
-alias customC	"use weapon_decoy; use weapon_molotov; use weapon_incgrenade"
-alias customQ	"use weapon_flashbang"
-alias customE	"use weapon_hegrenade"
+// Switch to decoy if it exists, else molly.
+alias customQ	"use weapon_molotov; use weapon_incgrenade; use weapon_decoy;"
+alias customE	"use weapon_flashbang"
 alias customF	"use weapon_smokegrenade"
+alias customC	"use weapon_hegrenade"
+// Give C4.
 alias customG	"use weapon_c4; drop"
 alias custom1	"autobuy; r_cleardecals"
 alias custom2	"buy flashbang; buy smokegrenade; r_cleardecals"
 alias custom3	"buy flashbang; buy smokegrenade; buy molotov; buy flashbang; buy defuser; r_cleardecals"
 alias customTAB	"togglenet"
+alias customMouse2	"use weapon_knife"
 
 //Part 4
 alias +keybinds "keyZ; keyX; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB"
