--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -50,7 +50,7 @@ bind "F6" "say ✌(ツ)ว"  // Chat message
 bind "F7" "say ( ͡° ͜ʖ ͡°)"  // Chat message
 bind "F8" "say 🍌"  // Chat message
 unbind "i"  // To not accidentally enable hud fade
-bind "4" "slot4"  // OK, I need to be able to use the flash when I defuse the bomb so I'm keeping this enabled
+bind "z" "slot4"  // OK, I need to be able to use the flash when I defuse the bomb so I'm keeping this enabled
 
 echo Bindings Loaded [X]   // Loading confirmation in console
 
@@ -150,7 +150,7 @@ echo Netgraph Settings Loaded [X]   // Loading confirmation in console
 
 fps_max "0"  // Max frames per second (0 = uncapped)
 fps_max_menu "0"  // Max frames per second in main-menu (0 = uncapped)
-mat_monitorgamma "1.6"  // Sets brightness level to highest
+//mat_monitorgamma "1.6"  // Sets brightness level to highest
 mat_monitorgamma_tv_enabled "0"  // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"  // Disables power saving mode
 mat_queue_mode "-1"  // The queue/thread mode, setting this to -1 is default for your system
@@ -226,8 +226,8 @@ alias "togglenet_off" "net_graph 0; alias togglenet "togglenet_on""
 // Advanced Bind Script - by Maxim aka BananaGaming
 
 //Part 1
-alias defZ		"bind z radio"
-alias defX		"bind x slot12"
+alias defZ		"bind z slot4"
+alias defV		"bind v noclip"
 alias defC		"bind c radio2"
 alias defQ		"bind q lastinv"
 alias defE		"bind e +use"
@@ -237,11 +237,11 @@ alias def1		"bind 1 slot1"
 alias def2		"bind 2 slot2"
 alias def3		"bind 3 slot3"
 alias defTAB		"bind tab +fps"
-alias defMouse2		"bind mouse2 +zoom"
+alias defMouse2		"bind mouse2 +attack2"
 
 //Part 2
 alias keyZ		"bind z customZ"
-alias keyX		"bind x customX"
+alias keyV		"bind v customV"
 alias keyC		"bind c customC"
 alias keyQ		"bind q customQ"
 alias keyE		"bind e customE"
@@ -257,21 +257,21 @@ alias keyMouse2		"bind mouse2 customMouse2"
 alias customZ	"god"
 alias customV	"noclip"
 // Switch to decoy if it exists, else molly.
-alias customQ	"use weapon_molotov; use weapon_incgrenade; use weapon_decoy;"
+alias customC	"use weapon_molotov; use weapon_incgrenade; use weapon_decoy;"
 alias customE	"use weapon_flashbang"
-alias customF	"use weapon_smokegrenade"
-alias customC	"use weapon_hegrenade"
+alias customQ	"use weapon_smokegrenade"
+alias customF	"use weapon_hegrenade"
 // Give C4.
 alias customG	"use weapon_c4; drop"
 alias custom1	"autobuy; r_cleardecals"
 alias custom2	"buy flashbang; buy smokegrenade; r_cleardecals"
 alias custom3	"buy flashbang; buy smokegrenade; buy molotov; buy flashbang; buy defuser; r_cleardecals"
 alias customTAB	"togglenet"
-alias customMouse2	"use weapon_knife"
+alias customMouse2	"-attack2; use weapon_knife"
 
 //Part 4
-alias +keybinds "keyZ; keyX; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB"
-alias -keybinds "defZ; defX; defC; defQ; defE; defF; defG; def1; def2; def3; defTAB"
+alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB; keyMouse2"
+alias -keybinds "defZ; defV; defC; defQ; defE; defF; defG; def1; def2; def3; defTAB; defMouse2"
 
 //Part 5 - Bind key to trigger secondary command
 bind mouse4 +keybinds
