Add grenade crosshair

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -254,7 +254,7 @@ alias keyTAB		"bind tab customTAB"
 alias keyMouse2		"bind mouse2 customMouse2"
 
 //Part 3
-alias customZ	"god"
+alias customZ	"slot4"
 alias customV	"noclip"
 // Switch to decoy if it exists, else molly.
 alias customC	"use weapon_molotov; use weapon_incgrenade; use weapon_decoy;"
@@ -270,8 +270,8 @@ alias customTAB	"togglenet"
 alias customMouse2	"-attack2; use weapon_knife"
 
 //Part 4
-alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB; keyMouse2"
-alias -keybinds "defZ; defV; defC; defQ; defE; defF; defG; def1; def2; def3; defTAB; defMouse2"
+alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB; keyMouse2; cl_crosshairsize 1000"
+alias -keybinds "defZ; defV; defC; defQ; defE; defF; defG; def1; def2; def3; defTAB; defMouse2; cl_crosshairsize 1"
 
 //Part 5 - Bind key to trigger secondary command
 bind mouse4 +keybinds
