Add damage script and fix crosshair bloom
TODO: Show all damage, not just when dead.

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -56,6 +56,19 @@ echo Bindings Loaded [X]   // Loading confirmation in console
 
 ////////////////////////// 3. Crosshair
 
+cl_crosshairdot 0;
+cl_crosshairgap -1;
+cl_crosshairsize 1;
+cl_crosshairstyle 4;
+cl_crosshairusealpha 1;
+cl_crosshairthickness 0.6;
+cl_crosshair_drawoutline 1;
+cl_crosshair_sniper_width 1;
+cl_crosshairalpha "250"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "80"
+cl_crosshaircolor_g "195"
+cl_crosshaircolor_r "27"
 echo Crosshair Loaded [X]   // Loading confirmation in console
 
 ////////////////////////// 4. Hud
@@ -150,7 +163,7 @@ echo Netgraph Settings Loaded [X]   // Loading confirmation in console
 
 fps_max "0"  // Max frames per second (0 = uncapped)
 fps_max_menu "0"  // Max frames per second in main-menu (0 = uncapped)
-//mat_monitorgamma "1.6"  // Sets brightness level to highest
+mat_monitorgamma "1.6"  // Sets brightness level to highest
 mat_monitorgamma_tv_enabled "0"  // Turn off TV Mode for less off-set light
 mat_powersavingsmode "0"  // Disables power saving mode
 mat_queue_mode "-1"  // The queue/thread mode, setting this to -1 is default for your system
@@ -197,6 +210,12 @@ alias +incvol "incrementvar volume 0 2 0.5;+speed"
 alias -incvol "incrementvar volume 0 2 -0.5;-speed"
 bind SHIFT +incvol
 
+//Displaydamage - Switch Script by 3st
+alias displaydamage "displaydamage_off"
+alias displaydamage_on "con_filter_text Damage; con_filter_text_out Player:; con_filter_enable 2; developer 1; alias displaydamage displaydamage_off"
+alias displaydamage_off "con_filter_enable 0; developer 0; clear; alias displaydamage displaydamage_on"
+bind "0" "displaydamage"
+
 // Load whatever gamemode you want with the "map" command. Examples: "map de_dust2; competitive" or "map dz_sirocco; dangerzone"
 alias "casual" "game_type 0; game_mode 0"
 alias "comp" "game_type 0; game_mode 1"
@@ -228,7 +247,7 @@ alias "togglenet_off" "net_graph 0; alias togglenet "togglenet_on""
 //Part 1
 alias defZ		"bind z slot4"
 alias defV		"bind v noclip"
-alias defC		"bind c radio2"
+alias defC		"bind c knife"
 alias defQ		"bind q lastinv"
 alias defE		"bind e +use"
 alias defF		"bind f +lookatweapon"
@@ -237,7 +256,7 @@ alias def1		"bind 1 slot1"
 alias def2		"bind 2 slot2"
 alias def3		"bind 3 slot3"
 alias defTAB		"bind tab +fps"
-alias defMouse2		"bind mouse2 +attack2"
+//alias defMouse2		"bind mouse2 +attack2"
 
 //Part 2
 alias keyZ		"bind z customZ"
@@ -251,9 +270,10 @@ alias key1		"bind 1 custom1"
 alias key2		"bind 2 custom2"
 alias key3		"bind 3 custom3"
 alias keyTAB		"bind tab customTAB"
-alias keyMouse2		"bind mouse2 customMouse2"
+//alias keyMouse2		"bind mouse2 customMouse2"
 
 //Part 3
+alias knife	"use weapon_knife"
 alias customZ	"slot4"
 alias customV	"noclip"
 // Switch to decoy if it exists, else molly.
@@ -270,8 +290,8 @@ alias customTAB	"togglenet"
 alias customMouse2	"-attack2; use weapon_knife"
 
 //Part 4
-alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB; keyMouse2; cl_crosshairsize 1000"
-alias -keybinds "defZ; defV; defC; defQ; defE; defF; defG; def1; def2; def3; defTAB; defMouse2; cl_crosshairsize 1"
+alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB; cl_crosshairsize 1000"
+alias -keybinds "defZ; defV; defC; defQ; defE; defF; defG; def1; def2; def3; defTAB; cl_crosshairsize 1"
 
 //Part 5 - Bind key to trigger secondary command
 bind mouse4 +keybinds
