--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -30,6 +30,8 @@ echo Main Settings Loaded [X]  // Loading confirmation in console
 
 ////////////////////////// 2. Bindings
 
+bind "ctrl" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
+bind "5" "use weapon_healthshot"
 bind "enter" "+attack"  // I'm lazy while spectating
 bind "." "toggleconsole"  // Binds console to the "." key
 bind "v" "+voicerecord"  // Use voice with "V"
@@ -112,7 +114,7 @@ m_mouseaccel1 "0"  // Disables windows mouse acceleration initial threshold, saf
 m_customaccel "0"  // Custom mouse acceleration disabled
 m_mousespeed "0"  // Windows mouse acceleration disabled, just for precaution
 sensitivity "1.4"  // Custom sensitivity value
-zoom_sensitivity_ratio_mouse "0.8"  // Adjusts your zoom sensitivity to act as your true sensitivity, default value is 1
+zoom_sensitivity_ratio_mouse "0.818933027098955175"  // Adjusts your zoom sensitivity to act as your true sensitivity, default value is 1
 
 echo Mouse Settings Loaded [X]   // Loading confirmation in console
 
@@ -199,6 +201,9 @@ spec_replay_autostart "0"  // Disable "Auto-start Killer Replay" when available
 echo Other Settings Loaded [X]   // Loading confirmation in console
 
 ////////////////////////// 6. Scripts
+
+// Use tab to see team equipment.
+bind tab "+showscores; +cl_show_team_equipment"
 
 // Jumpthrow (For Nades)
 // To use: Pull the pin from the grenade normally, then use the jumpthrow bind.
