Add Zoo Wee Mama

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -31,10 +31,9 @@ echo Main Settings Loaded [X]  // Loading confirmation in console
 ////////////////////////// 2. Bindings
 
 bind "ctrl" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
+bind "c" "knife"  // For when you gotta whip it out.
 bind "5" "use weapon_healthshot"
-bind "enter" "+attack"  // I'm lazy while spectating
 bind "." "toggleconsole"  // Binds console to the "." key
-bind "v" "+voicerecord"  // Use voice with "V"
 bind "r" "+reload; r_cleardecals"  // Reloads weapon and also clears decals
 bind "leftarrow" "+left"  // Turn left with arrow key
 bind "rightarrow" "+right"  // Turn right with arrow key
@@ -46,11 +45,14 @@ bind "home" "cl_draw_only_deathnotices 0"  // Show all of hud
 bind "end" "cl_draw_only_deathnotices 1"  // Hide parts of hud (for recording videos)
 bind "PGUP" "volume 1"  // Highest volume I play on
 bind "PGDN" "volume 0"  // Mute volume
-bind "F4" "ignoremsg"  // Toggle messages from enemies, team or both
+//bind "F4" "ignoremsg"  // Toggle messages from enemies, team or both
+bind "F4" "say gh                                                                                                                                                             Player Ekatana has left the game. (VAC banned from secure server)"
 bind "F5" "say ❤"  // Chat message
 bind "F6" "say ✌(ツ)ว"  // Chat message
 bind "F7" "say ( ͡° ͜ʖ ͡°)"  // Chat message
 bind "F8" "say 🍌"  // Chat message
+bind "F9" "say Remember when Dwayne 'The Rock' Johnson jumped off a 225-story supercrane in 2018 block buster film Skyscraper?"
+bind "F10" "say Zoo Wee Mama!"
 unbind "i"  // To not accidentally enable hud fade
 bind "z" "slot4"  // OK, I need to be able to use the flash when I defuse the bomb so I'm keeping this enabled
 bind "+" "slot12"  // Equip medi shot in deathmatch.
@@ -60,7 +62,7 @@ echo Bindings Loaded [X]   // Loading confirmation in console
 ////////////////////////// 3. Crosshair
 
 cl_crosshairdot 0;
-cl_crosshairgap -1;
+cl_crosshairgap -1.5;
 cl_crosshairsize 1;
 cl_crosshairstyle 4;
 cl_crosshairusealpha 1;
