Bind 5 to also equip bomb

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -32,7 +32,7 @@ echo Main Settings Loaded [X]  // Loading confirmation in console
 
 bind "ctrl" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
 bind "c" "knife"  // For when you gotta whip it out.
-bind "5" "use weapon_healthshot"
+bind "5" "use weapon_healthshot; use weapon_c4"
 bind "." "toggleconsole"  // Binds console to the "." key
 bind "r" "+reload; r_cleardecals"  // Reloads weapon and also clears decals
 bind "leftarrow" "+left"  // Turn left with arrow key
