Let mouse_4 clear decals. Crouch with alt

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -31,6 +31,7 @@ echo Main Settings Loaded [X]  // Loading confirmation in console
 ////////////////////////// 2. Bindings
 
 bind "ctrl" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
+bind "alt" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
 bind "c" "knife"  // For when you gotta whip it out.
 bind "5" "use weapon_healthshot; use weapon_c4"
 bind "." "toggleconsole"  // Binds console to the "." key
@@ -55,7 +56,6 @@ bind "F9" "say Remember when Dwayne 'The Rock' Johnson jumped off a 225-story su
 bind "F10" "say Zoo Wee Mama!"
 unbind "i"  // To not accidentally enable hud fade
 bind "z" "slot4"  // OK, I need to be able to use the flash when I defuse the bomb so I'm keeping this enabled
-bind "+" "slot12"  // Equip medi shot in deathmatch.
 
 echo Bindings Loaded [X]   // Loading confirmation in console
 
@@ -266,8 +266,8 @@ alias defG		"bind g drop"
 alias def1		"bind 1 slot1"
 alias def2		"bind 2 slot2"
 alias def3		"bind 3 slot3"
-alias defTAB		"bind tab +fps"
-//alias defMouse2		"bind mouse2 +attack2"
+alias defTAB	"bind tab +fps"
+//alias defMouse2	"bind mouse2 +attack2"
 
 //Part 2
 alias keyZ		"bind z customZ"
@@ -280,11 +280,11 @@ alias keyG		"bind g customG"
 alias key1		"bind 1 custom1"
 alias key2		"bind 2 custom2"
 alias key3		"bind 3 custom3"
-alias keyTAB		"bind tab customTAB"
-//alias keyMouse2		"bind mouse2 customMouse2"
+alias keyTAB	"bind tab customTAB"
+//alias keyMouse2	"bind mouse2 customMouse2"
 
 //Part 3
-alias knife	"use weapon_knife"
+alias knife	    "use weapon_knife"
 alias +knife	"use weapon_knife"
 alias -knife	"lastinv"
 alias customZ	"slot4"
@@ -297,13 +297,13 @@ alias customF	"use weapon_hegrenade"
 // Give C4.
 alias customG	"use weapon_c4; drop"
 alias custom1	"autobuy; r_cleardecals"
-alias custom2	"buy flashbang; buy smokegrenade; r_cleardecals"
-alias custom3	"buy flashbang; buy smokegrenade; buy molotov; buy flashbang; buy defuser; r_cleardecals"
+alias custom2	"buy flashbang; buy smokegrenade; buy molotov; buy flashbang; buy defuser; r_cleardecals"
+alias custom3	"buy flashbang; buy smokegrenade; r_cleardecals"
 alias customTAB	"togglenet"
-alias customMouse2	"-attack2; use weapon_knife"
+//alias customMouse2	"-attack2; use weapon_knife"
 
 //Part 4
-alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB; cl_crosshairsize 1000"
+alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB; cl_crosshairsize 1000; r_cleardecals"
 alias -keybinds "defZ; defV; defC; defQ; defE; defF; defG; def1; def2; def3; defTAB; cl_crosshairsize 1"
 
 //Part 5 - Bind key to trigger secondary command
