--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -47,7 +47,7 @@ bind "end" "cl_draw_only_deathnotices 1"  // Hide parts of hud (for recording vi
 bind "PGUP" "volume 1"  // Highest volume I play on
 bind "PGDN" "volume 0"  // Mute volume
 //bind "F4" "ignoremsg"  // Toggle messages from enemies, team or both
-bind "F4" "say gh                                                                                                                                                             Player Ekatana has left the game. (VAC banned from secure server)"
+bind "F4" "say gh🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌Player Ekatana has left the game. (VAC banned from secure server)"
 bind "F5" "say ❤"  // Chat message
 bind "F6" "say ✌(ツ)ว"  // Chat message
 bind "F7" "say ( ͡° ͜ʖ ͡°)"  // Chat message
@@ -127,6 +127,7 @@ echo Mouse Settings Loaded [X]   // Loading confirmation in console
 // viewmodel_offset_z "-2"  // Changes viewmodel view in Z scale
 // viewmodel_fov "68"  // Highest viewmodel FOV
 viewmodel_recoil "0"  // Disable viewmodel reactions to weapon recoil & aimpunch (from Update: 2018-03-01)
+bind l "toggle cl_righthand 0 1"  // Change weapon hand.
 
 echo Viewmodel Settings Loaded [X]   // Loading confirmation in console
 
@@ -284,10 +285,10 @@ alias keyTAB	"bind tab customTAB"
 //alias keyMouse2	"bind mouse2 customMouse2"
 
 //Part 3
-alias knife	    "use weapon_knife"
+alias knife	"use weapon_knife"
 alias +knife	"use weapon_knife"
 alias -knife	"lastinv"
-alias customZ	"slot4"
+alias customZ	"player_ping"
 alias customV	"noclip"
 // Switch to decoy if it exists, else molly.
 alias customC	"use weapon_molotov; use weapon_incgrenade; use weapon_decoy;"
