--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -236,7 +236,7 @@ alias "dz" "game_type 6; game_mode 0"
 alias "custom" "game_type 3; game_mode 0"
 
 // Useful shortcuts for popular commands in console
-alias "d" "disconnect"
+alias "d" "exec vac_disconnect"
 alias "q" "quit;exit"
 alias "r" "retry"
 alias "rs" "mp_restartgame 1"
