Add quality of life changes for practice and autobuy

--- a/CSGO/1v1.cfg
+++ b/CSGO/1v1.cfg
@@ -1,7 +1,11 @@
-mp_drop_grenade_enable 1  // In case you buy two of the same grenade.
-mp_anyone_can_pickup_c4 1
-mp_drop_knife_enable 1  // Drop your knife.
-give weapon_tagrenade
+//give weapon_awp
+//give weapon_ak47
+give weapon_deagle
+give item_assaultsuit  // Armor + Helmet
+give weapon_smokegrenade
+give weapon_flashbang
+give weapon_hegrenade
+give weapon_molotov
 give weapon_knife_butterfly;mp_drop_knife_enable 1;ent_fire weapon_knife addoutput "classname weapon_knifegg"
 
 //Knife commands:
@@ -19,6 +23,3 @@ give weapon_knife_butterfly;mp_drop_knife_enable 1;ent_fire weapon_knife addoutp
 //Navaja - give weapon_knife_gypsy_jackknife
 //Stiletto - give weapon_knife_stiletto
 //Talon - give weapon_knife_widowmaker
-//
-// For fists
-// give weapon_fists; ent_fire weapon_fists addoutput "classname weapon_knifegg"
