--- a/CSGO/autoexec.cfg
+++ b/CSGO/autoexec.cfg
@@ -22,19 +22,23 @@
 
 ////////////////////////// 1. Main Settings
 
-con_enable "1"  // Enables console
-cl_autowepswitch "0"  // Disable auto-weapon switch
-cl_join_advertise "2"  // Let friends join your community servers
+con_enable "1"		// Enables console
+cl_autowepswitch "0"	// Disable auto-weapon switch
+cl_join_advertise "2"	// Let friends join your community servers
+cl_showerror "2"	// Produce most detailed report on any active errors
 
 echo Main Settings Loaded [X]  // Loading confirmation in console
 
 ////////////////////////// 2. Bindings
-
+bind "1" "slot1"
+bind "2" "slot2"
 bind "ctrl" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
 bind "alt" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
-bind "c" "knife"  // For when you gotta whip it out.
+bind c "use weapon_knifegg;use weapon_knife"  // For when you gotta whip it out.
 bind "5" "use weapon_healthshot; use weapon_c4"
-bind "." "toggleconsole"  // Binds console to the "." key
+bind "." "say rethrow"
+bind "," "say place"
+bind "m" "exec 1v1"
 bind "r" "+reload; r_cleardecals"  // Reloads weapon and also clears decals
 bind "leftarrow" "+left"  // Turn left with arrow key
 bind "rightarrow" "+right"  // Turn right with arrow key
@@ -46,8 +50,10 @@ bind "home" "cl_draw_only_deathnotices 0"  // Show all of hud
 bind "end" "cl_draw_only_deathnotices 1"  // Hide parts of hud (for recording videos)
 bind "PGUP" "volume 1"  // Highest volume I play on
 bind "PGDN" "volume 0"  // Mute volume
-//bind "F4" "ignoremsg"  // Toggle messages from enemies, team or both
-bind "F4" "say gh🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌🍌Player Ekatana has left the game. (VAC banned from secure server)"
+bind "F1"	"give weapon_awp; buy awp; r_cleardecals"
+bind "F2"	"give weapon_ak47; buy ak47; r_cleardecals"
+bind "F3"	"rebuy; r_cleardecals"
+bind "F4" "say gh                                                                                                                                                   Player Ekatana has left the game. (VAC banned from secure server)"
 bind "F5" "say ❤"  // Chat message
 bind "F6" "say ✌(ツ)ว"  // Chat message
 bind "F7" "say ( ͡° ͜ʖ ͡°)"  // Chat message
@@ -265,11 +271,9 @@ alias defQ		"bind q lastinv"
 alias defE		"bind e +use"
 alias defF		"bind f +knife"  // Quickly swap between weapons. Useful for snipers and deagle.
 alias defG		"bind g drop"
-alias def1		"bind 1 slot1"
-alias def2		"bind 2 slot2"
 alias def3		"bind 3 slot3"
-alias defTAB	"bind tab +fps"
-//alias defMouse2	"bind mouse2 +attack2"
+alias def4		"bind 4 slot4"
+alias defTAB		"bind tab +fps"
 
 //Part 2
 alias keyZ		"bind z customZ"
@@ -279,15 +283,13 @@ alias keyQ		"bind q customQ"
 alias keyE		"bind e customE"
 alias keyF		"bind f customF"
 alias keyG		"bind g customG"
-alias key1		"bind 1 custom1"
-alias key2		"bind 2 custom2"
 alias key3		"bind 3 custom3"
-alias keyTAB	"bind tab customTAB"
-//alias keyMouse2	"bind mouse2 customMouse2"
+alias key4		"bind 4 custom4"
+alias keyTAB		"bind tab customTAB"
 
 //Part 3
-alias knife	"use weapon_knife"
-alias +knife	"use weapon_knife"
+alias knife	"use weapon_knifegg;use weapon_knife"
+alias +knife	"use weapon_knifegg;use weapon_knife"
 alias -knife	"lastinv"
 alias customZ	"player_ping"
 alias customV	"noclip"
@@ -296,17 +298,15 @@ alias customC	"use weapon_molotov; use weapon_incgrenade; use weapon_decoy;"
 alias customE	"use weapon_flashbang"
 alias customQ	"use weapon_smokegrenade"
 alias customF	"use weapon_hegrenade"
-// Give C4.
+// Give C4 away.
 alias customG	"use weapon_c4; drop"
-alias custom1	"autobuy; r_cleardecals"
-alias custom2	"buy flashbang; buy smokegrenade; buy molotov; buy flashbang; buy defuser; r_cleardecals"
-alias custom3	"buy flashbang; buy smokegrenade; r_cleardecals"
 alias customTAB	"togglenet"
-//alias customMouse2	"-attack2; use weapon_knife"
+alias custom3	"buy flashbang; buy smokegrenade; buy molotov; buy flashbang; buy defuser; r_cleardecals"
+alias custom4	"buy hegrenade; r_cleardecals"
 
 //Part 4
-alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key1; key2; key3; keyTAB; cl_crosshairsize 1000; r_cleardecals"
-alias -keybinds "defZ; defV; defC; defQ; defE; defF; defG; def1; def2; def3; defTAB; cl_crosshairsize 1"
+alias +keybinds "keyZ; keyV; keyC; keyQ; keyE; keyF; keyG; key3; key4; keyTAB; cl_crosshairsize 1000; r_cleardecals"
+alias -keybinds "defZ; defV; defC; defQ; defE; defF; defG; def3; def4; defTAB; cl_crosshairsize 1"
 
 //Part 5 - Bind key to trigger secondary command
 bind mouse4 +keybinds
