--- a/CSGO/practice.cfg
+++ b/CSGO/practice.cfg
@@ -10,7 +10,7 @@ mp_roundtime_defuse 60
 mp_roundtime_hostage 60
 mp_roundtime 60
 bot_kick
-//mp_warmuptime 999999999
+mp_warmuptime 0
 mp_respawn_on_death_t 1
 mp_respawn_on_death_ct 1
 mp_restartgame 1
@@ -19,7 +19,7 @@ mp_anyone_can_pickup_c4
 sv_grenade_trajectory 1
 sv_grenade_trajectory_time 10
 bind "V" "noclip"
-bind "C" "give weapon_hegrenade; give weapon_flashbang; give weapon_smokegrenade; give weapon_molotov"
 god
 buddha
 mp_forcerespawnplayers
+ammo_grenade_limit_total 8
