Add file location to comment

--- a/CSGO/autoexec.cfg
+++ b/CSGO/autoexec.cfg
@@ -3,6 +3,7 @@
 // With this autoexec I'm using the following mods
 // Text Color Mod: https://bananagaming.tv/textcolormod.php
 // Improved Radio Mod: https://bananagaming.tv/improvedradiomod.php
+// CS2 Location: C:\Program Files (x86)\Steam\steamapps\common\Counter-Strike Global Offensive\game\csgo\cfg
 
 // Content
 // 1. Main Settings
