Fix incvol command in CS2
+speed is now +sprint for walking

--- a/CSGO/autoexec.cfg
+++ b/CSGO/autoexec.cfg
@@ -35,7 +35,7 @@ bind "1" "slot1"
 bind "2" "slot2"
 bind "ctrl" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
 bind "alt" "+duck"  // I use Alt to crouch, so this lets me tab while crouched.
-bind "shift" "+sprint"
+bind "shift" "+incvol"
 bind c "slot3"  // For when you gotta whip it out.
 bind "mouse3" "+lookatweapon"
 bind "5" "slot5"
@@ -55,7 +55,8 @@ bind "PGDN" "volume 0"  // Mute volume
 //bind "F1"	"give weapon_awp; buy awp; r_cleardecals"
 bind "F2"	"give weapon_ak47; buy ak47; r_cleardecals"
 bind "F3"	"rebuy; r_cleardecals"
-bind "F4" "say gh  Player Bob Barker has left the game. (VAC banned from secure server)"
+bind "F4" "say gh 
+Player Bob Barker has left the game. (VAC banned from secure server)"
 bind "F5" "say ❤"  // Chat message
 bind "F6" "say ✌(ツ)ว"  // Chat message
 bind "F7" "say ( ͡° ͜ʖ ͡°)"  // Chat message
@@ -224,8 +225,8 @@ alias "-runthrow" "-jump;-forward"
 bind "x" "+runthrow;+throwaction"
 
 // Increase volume when walking.
-alias +incvol "incrementvar volume 0 2 0.4;+speed"
-alias -incvol "incrementvar volume 0 2 -0.4;-speed"
+alias +incvol "incrementvar volume 0 2 0.4;+sprint"
+alias -incvol "incrementvar volume 0 2 -0.4;-sprint"
 
 //Displaydamage - Switch Script by 3st
 alias displaydamage "displaydamage_off"
